client/src/css/Details.css
body {
  background: #e0eafc; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to right,
    #cfdef3,
    #e0eafc
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to right,
    #cfdef3,
    #e0eafc
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.bodyContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 80%;
  min-height: 600px;
  height: 700px;
  align-self: center;
  margin: 3rem;
  background-color: white;
}

.main-div {
  margin: 2rem;
}

.sentences {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 50%;
  min-width: auto;
  height: 100%;
  align-self: start;
  margin: 2rem;
  border:none;
}

.sentence-cards {
  margin: 1em;
  display: flex;
  flex-direction: row;
  margin: 2em;
  text-align: center;
  width: 350px;
  border-radius: 1em;
  background: #c9e6e7;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.4);
  border: none;
}

